--- a/src/app/coins/coins.component.scss
+++ b/src/app/coins/coins.component.scss
@@ -11,10 +11,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 1px solid gray;
+    border: 1px solid rgba(97, 96, 96, 0.6);
     padding: 20px;
     margin: 20px;
     width: 500px;
+    border-radius: 3px;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0 0 11px rgba(33,33,33,.2);
+    }
 
     span {
       text-decoration: underline;
@@ -22,7 +28,7 @@
     }
 
     .coinGeckoSymbol {
-      flex: 50%;
+      width: 80%;
       margin-right: 20px;
     }
   }
